--- a/services/nginx-rev-proxy/config/nginx.conf
+++ b/services/nginx-rev-proxy/config/nginx.conf
@@ -43,11 +43,12 @@ http {
   # configuration.
   ssl_certificate /etc/nginx/certs/fullchain.pem;
   ssl_certificate_key /etc/nginx/certs/privkey.pem;
-  ssl_ciphers EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH;
-  ssl_protocols TLSv1.1 TLSv1.2;
+  ssl_ciphers ECDHE-RSA-AES256-GCM-SHA512:DHE-RSA-AES256-GCM-SHA512:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-SHA384;
+  ssl_protocols TLSv1.2 TLSv1.3;
 
   ssl_prefer_server_ciphers on;
   ssl_dhparam /etc/nginx/certs/dhparam4096.pem;
+  ssl_ecdh_curve secp384r1; 
   ssl_session_cache shared:SSL:10m;
   ssl_session_timeout 10m;
 
