Moved certs to mounted volume, not a good idea to store in docker image

--- a/services/nginx-rev-proxy/docker-compose.yml
+++ b/services/nginx-rev-proxy/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     image: nginx-rev-proxy
     container_name: nginx-rev-proxy
     restart: "no"
+    volumes:
+      - '/data/nginx/certs:/etc/nginx/certs'
     ports:
       - "80:80"
       - "443:443"
