--- a/services/postgres/docker-compose.yml
+++ b/services/postgres/docker-compose.yml
@@ -7,17 +7,14 @@ networks:
       name: ${NETWORK:?}
 
 services:
-  postgres-db:
-    build: .
-    image: postgres-db
-    container_name: postgres-db
+  postgres:
+    image: postgres:12.3-alpine
+    container_name: postgres
     restart: "no"
     environment:
-      - POSTGRES_DB=${POSTGRES_DB:-postgres}
-      - POSTGRES_USER=${POSTGRES_USER:-postgres}
-      # Required, see services/.secret
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD:?}
     volumes:
       - "${POSTGRES_DATA_VOLUME:-/data/postgres}:/var/lib/postgresql/data"
+      - "./scripts:/docker-entrypoint-initdb.d"
     ports:
       - "${POSTGRES_SERVER_PORT:-5432}:5432"
