--- a/services/kafka/docker-compose.yml
+++ b/services/kafka/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     ports:
       - '9092:9092'
     volumes:
-      - '/data/kafka:/bitnami'
+      - '${KAFKA_DATA_DIR}:/bitnami'
     environment:
       - KAFKA_CFG_ZOOKEEPER_CONNECT=zookeeper:2181
       - ALLOW_PLAINTEXT_LISTENER=yes
