--- a/services/postgres/docker-compose.yml
+++ b/services/postgres/docker-compose.yml
@@ -14,7 +14,7 @@ services:
     environment:
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD:?}
     volumes:
-      - "${POSTGRES_DATA_VOLUME:-/data/postgres}:/var/lib/postgresql/data"
-      - "./scripts:/docker-entrypoint-initdb.d"
+      - "${POSTGRES_DATA_DIR}/pgdata:/var/lib/postgresql/data"
+      - "${POSTGRES_DATA_DIR}/scripts:/docker-entrypoint-initdb.d"
     ports:
       - "${POSTGRES_SERVER_PORT:-5432}:5432"
