--- a/services/zookeeper/docker-compose.yml
+++ b/services/zookeeper/docker-compose.yml
@@ -15,4 +15,4 @@ services:
     volumes:
       - '/data/zookeeper:/bitnami'
     environment:
-      - ALLOW_ANONYMOUS_LOGIN=${ZK_ALLOW_ANONYMOUS_LOGIN:-no}
+      - ALLOW_ANONYMOUS_LOGIN=yes
