Nginx should not manage archive directory, and update gnoht conf to map to archive directory.

--- a/services/nginx/config/conf.d/tlrl.gnoht.com.conf
+++ b/services/nginx/config/conf.d/tlrl.gnoht.com.conf
@@ -19,5 +19,10 @@ server {
     proxy_pass $upstream_server;                    
     proxy_read_timeout 90;
   }
+
+  location /_archive {
+    internal;
+    alias /data/archive
+  }
 }
 
