Reorg to pull in variables from default. Make variable names more consistent.

--- a/services/nginx/docker-compose.yml
+++ b/services/nginx/docker-compose.yml
@@ -5,11 +5,11 @@ services:
     container_name: nginx
     restart: "no"
     volumes:
-      - '${NGINX_DATA_DIR:?}/config/certs:/etc/nginx/certs'
-      - '${NGINX_DATA_DIR}/config/nginx.conf:/etc/nginx/nginx.conf'
-      - '${NGINX_DATA_DIR}/config/conf.d:/etc/nginx/conf.d'
+      - '${NGINX_HOST_DATA_DIR:?}/config/certs:/etc/nginx/certs'
+      - '${NGINX_HOST_DATA_DIR}/config/nginx.conf:/etc/nginx/nginx.conf'
+      - '${NGINX_HOST_DATA_DIR}/config/conf.d:/etc/nginx/conf.d'
       # used by tlrl.gnoht.com.conf, just need it to be readable
-      - '${ARCHIVE_DIR:?}:/data/archive'
+      - '${ARCHIVE_HOST_DATA_DIR:?}:/data/archive'
     ports:
       - "80:80"
       - "443:443"
