--- a/services/kafka/docker-compose.yml
+++ b/services/kafka/docker-compose.yml
@@ -13,12 +13,15 @@ services:
     ports:
       - '9092:9092'
     volumes:
-      - '${KAFKA_DATA_DIR}:/bitnami/kafka'
+      - '${KAFKA_HOST_DATA_DIR}:/bitnami/kafka'
     environment:
       - KAFKA_CFG_ZOOKEEPER_CONNECT=zookeeper:2181
       - ALLOW_PLAINTEXT_LISTENER=yes
       - KAFKA_CFG_AUTO_CREATE_TOPICS_ENABLE=true
-      - KAFKA_CFG_LISTENERS=CLIENT://:9092
-      - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=CLIENT:PLAINTEXT
-      - KAFKA_CFG_ADVERTISED_LISTENERS=CLIENT://localhost:9092
+      - KAFKA_CFG_LISTENERS=CLIENT://:9092,EXTERNAL://:9093
+      - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=CLIENT:PLAINTEXT,EXTERNAL:PLAINTEXT
+      - KAFKA_CFG_ADVERTISED_LISTENERS=CLIENT://kafka:9092,EXTERNAL://localhost:9093
       - KAFKA_CFG_INTER_BROKER_LISTENER_NAME=CLIENT
+    ports:
+      - '9092:9092'
+      - '9093:9093'
