--- a/services/default.env
+++ b/services/default.env
@@ -21,6 +21,7 @@ TLRL_KAFKA_BROKERS=kafka:9092
 TLRL_SOLR_SERVER=solr:8983
 TLRL_DB_NAME=tlrldb
 TLRL_DB_USER=tlrluser
+TLRL_DB_ADMIN=tlrladmin
 TLRL_DB_SERVER_HOSTNAME=localhst
 TLRL_DB_SERVER_PORT=5432
 TLRL_DB_DDL_AUTO=none
