Correct systemd name for tlrl/fetcher service. Aditional properties for tlrl-app serveice

--- a/services/default.env
+++ b/services/default.env
@@ -22,7 +22,10 @@ TLRL_SOLR_SERVER=solr:8983
 TLRL_DB_NAME=tlrldb
 TLRL_DB_USER=tlrluser
 TLRL_DB_ADMIN=tlrladmin
-TLRL_DB_SERVER_HOSTNAME=localhst
+TLRL_DB_SERVER_HOSTNAME=postgres
 TLRL_DB_SERVER_PORT=5432
 TLRL_DB_DDL_AUTO=none
 
+FETCHER_LOG_LVL=4
+FETCHER_KAFKA_BROKERS=kafka:9092
+FETCHER_SOLR_SERVER=solr:8983
