--- a/services/nginx/config/conf.d/tlrl.gnoht.com.conf
+++ b/services/nginx/config/conf.d/tlrl.gnoht.com.conf
@@ -16,6 +16,8 @@ server {
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forward-For $proxy_add_x_forwarded_for;
     proxy_set_header X-Forward-Proto $scheme;
+    proxy_set_header X-Forward-Host $host;
+    proxy_set_header X-Forward-Port $server_port;
     proxy_pass $upstream_server;                    
     proxy_read_timeout 90;
   }
