Additional site configs, corrected gzip config

--- a/services/nginx/config/nginx.conf
+++ b/services/nginx/config/nginx.conf
@@ -25,7 +25,8 @@ http {
   keepalive_timeout  75;
 
   gzip on;
-  gzip_types text/css image/jpg image/jpeg image/png image/svg;
+  gzip_types text/css text/plain text/html application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript;
+  gzip_buffers 16 8k; 
 
   include /etc/nginx/conf.d/*.conf;
 	
