--- a/services/nginx/config/nginx.conf
+++ b/services/nginx/config/nginx.conf
@@ -31,6 +31,7 @@ http {
   include /etc/nginx/conf.d/*.conf;
 	
   server_tokens off;
+  disable_symlinks off;
 
   # https://www.linode.com/docs/web-servers/nginx/slightly-more-advanced-configurations-for-nginx/
   add_header X-Content-Type-Options nosniff;
